# hsI2C

./: .travis.yml  README.md  hsI2C.cabal
System/Hardware/: I2C.hs  I2CTest.hs  LinuxDevI2C.hs
