name:                hsI2C
version:             0.1.3.1
synopsis:            I2C access for Haskell and Linux
description:         I2C access for Haskell and Linux
                      
license:             BSD3
license-files:       LICENSE,LGPL
author:              Marc Fontaine
maintainer:          Marc.Fontaine@gmx.de
copyright:           Marc Fontaine
category:            Hardware,I2C
build-type:          Simple
cabal-version:       >=1.22
tested-With:         GHC == 8.2.2 , GHC == 8.0.2 , GHC == 7.10.2 , GHC == 7.8.4
homepage:            https://github.com/MarcFontaine/hsI2c                     
extra-source-files:
     README.md
   , include/i2c/smbus.h
   , include/linux/i2c-dev.h
source-repository head
  type:     git
  location: git://github.com/MarcFontaine/hsI2C.git
                  
library
  exposed-modules:  System.Hardware.I2C
                   ,System.Hardware.LinuxDevI2C
                   ,System.Hardware.I2CTest
  build-depends:    base < 4.11
                  , bytestring
                  , unix
  c-sources:      cbits/smbus.c
  include-dirs:   include
