cabal-version:       3.4
name:                hsI2C
version:             0.1.4.0
synopsis:            I2C access for Haskell and Linux
description:         I2C access for Haskell and Linux
license:             BSD-3-Clause
license-files:       LICENSE,LGPL
author:              Marc Fontaine
maintainer:          Marc.Fontaine@gmx.de
copyright:           Marc Fontaine
category:            Hardware, I2C
build-type:          Simple
tested-With:         GHC == 8.10.4
homepage:            https://github.com/MarcFontaine/hsI2c
extra-source-files:
     README.md
   , include/i2c/smbus.h
   , include/linux/i2c-dev.h
source-repository head
  type:     git
  location: git://github.com/MarcFontaine/hsI2C.git
library
  build-depends:
    , base < 4.15
    , bytestring
    , unix
  c-sources:      cbits/smbus.c
  include-dirs:   include
  exposed-modules:
    System.Hardware.I2C
    System.Hardware.LinuxDevI2C
    System.Hardware.I2CTest
